# sandbox.cpp

./: .cproject  .gitignore  .project  CMakeLists.txt  Makefile  arm-linux-gnueabihf-gcc-7.2.0.sh  build.cmd  build.sh  i686-w32-mingw32-7.2.0.cmd  mingw-w64-7.2.0.cmd  mingw-w64-7.2.0.mk  x86_64-w64-mingw32-7.2.0.cmd
cmake/: Paths.cmake
dependencies/googletest/: CMakeLists.txt
lib/: CMakeLists.txt
lib/googletest/: CMakeLists.txt
script/setup/: clang-4.sh  clang-5.sh  clang.sh  cleang-5.sh
script/setup/jessie/: clang-4.sh
script/setup/stretch/: clang-4.sh  clang-5.sh
src/: CMakeLists.txt
src/include/cpp/com/u14n/sandbox/cpp/model/: Branch.hpp  Forked.hpp  Leaf.hpp  Named.hpp  Pronged.hpp  Root.hpp
src/include/cpp/com/u14n/sandbox/cpp/model/taxonomy/: Classis.hpp  Familia.hpp  Genus.hpp  Ordo.hpp  Phylum.hpp  Regnum.hpp  Species.hpp
src/include/cpp/com/u14n/sandbox/cpp/model/taxonomy/classis/: Mammalia.hpp
src/include/cpp/com/u14n/sandbox/cpp/model/taxonomy/familia/: Canidae.hpp
src/include/cpp/com/u14n/sandbox/cpp/model/taxonomy/genus/: Canis.hpp
src/include/cpp/com/u14n/sandbox/cpp/model/taxonomy/ordo/: Carnivora.hpp
src/include/cpp/com/u14n/sandbox/cpp/model/taxonomy/phylum/: Chordata.hpp
src/include/cpp/com/u14n/sandbox/cpp/model/taxonomy/regnum/: Animalia.hpp
src/include/cpp/com/u14n/sandbox/cpp/model/taxonomy/species/: Lupus.hpp
src/lib/gmock-0.8.3/docs/: index.html
src/lib/gmock-0.8.3/samples/cache/: build.gradle  gradlew
src/lib/gmock-0.8.3/samples/collaborator/: build.gradle  gradlew.bat
src/lib/gmock-0.8.3/wrapper/: gradle-wrapper.properties
src/lib/gtest-1.7.0/: build.cmd  build.sh
src/lib/gtest-1.7.0/fused-src/gtest/: gtest-all.cc
src/lib/gtest-1.7.0/src/: gtest-internal-inl.h  gtest.cc
src/main/cpp/com/u14n/sandbox/cpp/: Constants.cpp  Constants.hpp
src/main/cpp/com/u14n/sandbox/cpp/model/: Branch.cpp  Forked.cpp  Leaf.cpp  Named.cpp  Pronged.cpp  Root.cpp
src/main/cpp/com/u14n/sandbox/cpp/model/ontology/: Topic.cpp  Topic.hpp
src/main/cpp/com/u14n/sandbox/cpp/model/taxonomy/: Classis.cpp  Familia.cpp  Genus.cpp  Ordo.cpp  Phylum.cpp  Regnum.cpp  Species.cpp
src/main/cpp/com/u14n/sandbox/cpp/model/taxonomy/classis/: Mammalia.cpp
src/main/cpp/com/u14n/sandbox/cpp/model/taxonomy/familia/: Canidae.cpp
src/main/cpp/com/u14n/sandbox/cpp/model/taxonomy/genus/: Canis.cpp
src/main/cpp/com/u14n/sandbox/cpp/model/taxonomy/ordo/: Carnivora.cpp
src/main/cpp/com/u14n/sandbox/cpp/model/taxonomy/phylum/: Chordata.cpp
src/main/cpp/com/u14n/sandbox/cpp/model/taxonomy/regnum/: Animalia.cpp
src/main/cpp/com/u14n/sandbox/cpp/model/taxonomy/species/: Lupus.cpp
src/test/cpp/com/u14n/sandbox/cpp/model/ontology/: TopicTest.cpp
src/test/cpp/com/u14n/sandbox/cpp/model/taxonomy/: SpeciesTest.cpp
src/test/cpp/com/u14n/sandbox/cpp/model/taxonomy/species/: LupusTest.cpp
test/: CMakeLists.txt
test/c++11/: CMakeLists.txt
test/c++11/variable_number_of_arguments/: CMakeLists.txt
test/c++14/: CMakeLists.txt
test/c++14/floating_point_literal/: CMakeLists.txt
test/c++17/: CMakeLists.txt
test/c++17/range-based_for_loop/: CMakeLists.txt  test.cpp
test/c++17/template_auto/: CMakeLists.txt  test.cpp
test/c++17/template_deduction/: CMakeLists.txt  test.cpp
test/c++20/: CMakeLists.txt
test/c++20/coroutine/: CMakeLists.txt  test.cpp
test/coroutine/: CMakeLists.txt  test.cpp
test/floating_point_literal/: test.cpp
test/gtest_find/: CMakeLists.txt  test.cpp
test/range-based_fo_loop/: CMakeLists.txt
test/range-based_for_loop/: CMakeLists.txt  test.cpp
test/template_auto/: test.cpp
test/variable_number_of_arguments/: CMakeLists.txt  test.cpp
toolchain/: Visual Studio 12 2013.cmake  Visual Studio 15 2017.cmake  clang-3.9.cmake  clang-4.0.cmake  clang-5.0.cmake  gcc-7.2.0.cmake  i686-w32-mingw32-7.2.0.cmake  x86_64-w64-mingw32-7.2.0.cmake
